register page done

--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
     <div id="login-container" class="">
         <h1>Login</h1>
 
-        <form action="" id="login-form">
+        <form id="login-form">
             <div class="input-container">
                 <label for="username-input-login" class="label-login-register">Username</label>
                 <input type="text" name="username-input-login" id="username-input-login" placeholder="Masukkan username..." class="input" required>
@@ -34,7 +34,7 @@
     <div id="register-container" class="hidden">
         <h1>Register</h1>
 
-        <form action="" id="register-form">
+        <form id="register-form">
             <div class="input-container">
                 <label for="username-input-register">Username</label>
                 <input type="text" name="username-input-register" id="username-input-register" placeholder="Masukkan username..." class="input" required>
@@ -51,7 +51,7 @@
     </div>
 
     <div id="notification">
-        <h4 id="notification-message">btes</h4>
+        <h4 id="notification-message">Pesan</h4>
     </div>
 
     <script type="module" src="assets/js/auth.js"></script>
