--- a/dashboard.html
+++ b/dashboard.html
@@ -58,32 +58,40 @@
                 <h2>Halo, <span id="username"></span></h2>
                 <button id="add-task-btn">+ Tambah Tugas Baru</button>
             </div>
+                <h3 id="main-container-cards-task-text">Anda belum memiliki tugas. Ayo buat yang pertama!</h3>
 
             <div id="main-container-cards-task">
-                <h3 id="main-container-cards-task-text">Anda belum memiliki tugas. Ayo buat yang pertama!</h3>
                 
-                <!-- <div class="card-task">
-                    <div class="card-task-left">
-                        <input type="checkbox" name="status-task-cbx" class="status-task-cbx">
-                        <div class="card-task-text">
-                            <h3>Judul Tugas</h3>
-                            <p>Deskripsi Tugas</p>
-                        </div>
-                    </div>
 
-                    <div class="card-task-action">
-                        <svg width="20" height="20">
-                            <use href="#edit"></use>
-                        </svg>
-                        <svg width="20" height="20">
-                            <use href="#delete"></use>
-                        </svg>
-                    </div>
-                </div> -->
             </div>
         </div>
     </main>
 
-    <script src="assets/js/dashboard.js"></script>
+    <div id="notification">
+        <h4 id="notification-message">Pesan</h4>
+    </div>
+
+    <script type="module" src="assets/js/dashboard.js"></script>
+
+    <template id="card-task-template">
+        <div class="card-task">
+            <div class="card-task-left">
+                <input type="checkbox" name="status-task-cbx" class="status-task-cbx">
+                <div class="card-task-text">
+                    <h3 class="title">Judul Tugas</h3>
+                    <p class="description">Deskripsi Tugas</p>
+                </div>
+            </div>
+
+            <div class="card-task-action">
+                <svg width="20" height="20" class="edit-btn">
+                    <use href="#edit"></use>
+                </svg>
+                <svg width="20" height="20" class="delete-btn">
+                    <use href="#delete"></use>
+                </svg>
+            </div>
+        </div>
+    </template>
 </body>
 </html>
