--- a/login.html
+++ b/login.html
@@ -12,10 +12,10 @@
     <link rel="stylesheet" href="assets/css/login.css">
 </head>
 <body>
-    <div id="login-container" class="">
+    <div id="login-container" class="container">
         <h1>Login</h1>
 
-        <form id="login-form">
+        <form id="login-form" class="form">
             <div class="input-container">
                 <label for="username-input-login" class="label-login-register">Username</label>
                 <input type="text" name="username-input-login" id="username-input-login" placeholder="Masukkan username..." class="input" required>
@@ -25,16 +25,16 @@
                 <input type="password" name="password-input-login" id="password-input-login" placeholder="Masukkan password..." class="input" required>
             </div>
 
-            <button id="login-btn" type="submit">Login</button>
+            <button id="login-btn" class="btn" type="submit">Login</button>
         </form>
 
         <h4 id="text-register-acc">Belum punya akun? Daftar di sini</h4>
     </div>
 
-    <div id="register-container" class="hidden">
+    <div id="register-container" class="container hidden">
         <h1>Register</h1>
 
-        <form id="register-form">
+        <form id="register-form" class="form">
             <div class="input-container">
                 <label for="username-input-register">Username</label>
                 <input type="text" name="username-input-register" id="username-input-register" placeholder="Masukkan username..." class="input" required>
@@ -44,7 +44,7 @@
                 <input type="password" name="password-input-register" id="password-input-register" placeholder="Masukkan password..." class="input" required>
             </div>
 
-            <button id="register-btn" type="submit">Register</button>
+            <button id="register-btn" class="btn" type="submit">Register</button>
         </form>
 
         <h4 id="text-login-acc">Sudah punya akun? Login di sini</h4>
