menambahkan fitur edit task

--- a/dashboard.html
+++ b/dashboard.html
@@ -70,7 +70,7 @@
     <div id="modal-backdrop" class="hidden"></div>
 
     <div id="add-task-container" class="container hidden">
-        <h1>Buat Tugas Baru</h1>
+        <h1 id="add-task-heading">Buat Tugas Baru</h1>
 
         <form id="add-task-form" class="form">
             <div class="input-container">
@@ -84,7 +84,7 @@
 
             <div id="add-task-container-btn">
                 <button id="save-btn" class="btn">Simpan</button>
-                <button id="cancel-btn" class="btn">Batal</button>
+                <button id="cancel-btn" type="button" class="btn">Batal</button>
             </div>
         </form>
     </div>
